--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=3232
+MONGO_URI=mongodb://Kanon11:bcchpnv5@ac-eucurkl-shard-00-00.pxoav5v.mongodb.net:27017,ac-eucurkl-shard-00-01.pxoav5v.mongodb.net:27017,ac-eucurkl-shard-00-02.pxoav5v.mongodb.net:27017/?ssl=true&replicaSet=atlas-hlzpnu-shard-0&authSource=admin&retryWrites=true&w=majority
